--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ services:
 
   task-management-system-guide:
     image: task-management-system-guide
-    build: .
+    build: main-service
     container_name: task-management-system-guide
     ports:
       - "8080:8080"
@@ -12,6 +12,7 @@ services:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://tms_db:5432/tms_db
       - SPRING_DATASOURCE_USERNAME=ultro
       - SPRING_DATASOURCE_PASSWORD=163163
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
 
   tms_db:
     image: postgres:16.1
@@ -27,3 +28,30 @@ services:
       timeout: 5s
       interval: 5s
       retries: 10
+
+  zookeeper:
+    image: confluentinc/cp-zookeeper:latest
+    container_name: zookeeper
+    ports:
+      - "2181:2181"
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+
+  kafka:
+      image: confluentinc/cp-kafka:latest
+      container_name: kafka
+      depends_on:
+        - zookeeper
+      ports:
+        - "9092:9092"
+      environment:
+        KAFKA_BROKER_ID: 1
+        KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+        KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://host.docker.internal:9092
+        KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
+        KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      healthcheck:
+        test: [ "CMD-SHELL", "kafka-topics.sh --bootstrap-server kafka:9092 --list" ]
+        interval: 10s
+        retries: 5
