--- a/statistic-service/src/main/resources/application.properties
+++ b/statistic-service/src/main/resources/application.properties
@@ -9,6 +9,6 @@ spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:host.docker.internal:90
 server.port=9090
 
 
-spring.data.mongodb.uri=mongodb://ultro:163163@localhost:27017
+spring.data.mongodb.uri=mongodb://ultro:163163@localhost:27017/mongdb-tms
 
 
