work in kafka(2)

--- a/statistic-service/src/main/resources/application.properties
+++ b/statistic-service/src/main/resources/application.properties
@@ -1,14 +1,24 @@
+# Logging Configuration
 spring.mvc.log-resolved-exception=true
 logging.level.org.springframework.web=info
 logging.level.org.springframework.security=info
 logging.level.com.example=info
 
-
-spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:host.docker.internal:9092}
-
+# Server Configuration
 server.port=9090
 
-
+# MongoDB Configuration
 spring.data.mongodb.uri=mongodb://ultro:163163@localhost:27017/mongdb-tms
 
+# Kafka Configuration
+spring.kafka.bootstrap-servers=localhost:9092
 
+# Consumer settings
+spring.kafka.consumer.group-id=statistic
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.enable-auto-commit=false
+spring.kafka.consumer.max-poll-records=500
+spring.kafka.consumer.session-timeout-ms=10000
+
+# Trusted packages for deserialization
+spring.kafka.consumer.trusted-packages=com.example.kafka.*
