work in kafka(3)

--- a/main-service/src/main/resources/application.properties
+++ b/main-service/src/main/resources/application.properties
@@ -35,7 +35,7 @@ springdoc.swagger-ui.path=/swagger-ui.html
 # Kafka Configuration
 spring.kafka.bootstrap-servers=localhost:9092
 
-spring.kafka.producer.acks=all
+spring.kafka.producer.acks=1
 spring.kafka.producer.retries=3
 spring.kafka.producer.batch-size=16384
 spring.kafka.producer.linger-ms=1
