work in kafka(4)

--- a/statistic-service/src/main/resources/application.properties
+++ b/statistic-service/src/main/resources/application.properties
@@ -8,8 +8,11 @@ logging.level.com.example=info
 server.port=9090
 
 # MongoDB Configuration
-spring.data.mongodb.uri=mongodb://ultro:163163@localhost:27017/mongdb-tms
-
+#spring.data.mongodb.uri=mongodb://ultro:163163@localhost:27017/mongdb-tms
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=mongdb-tms
+spring.data.mongodb.password=163163
 # Kafka Configuration
 spring.kafka.bootstrap-servers=localhost:9092
 
@@ -22,3 +25,7 @@ spring.kafka.consumer.session-timeout-ms=10000
 
 # Trusted packages for deserialization
 spring.kafka.consumer.trusted-packages=com.example.kafka.*
+
+
+spring.graphql.path=/graph/statistic
+spring.graphql.graphiql.enabled=true
