work in kafka(5)

--- a/statistic-service/src/main/resources/application.properties
+++ b/statistic-service/src/main/resources/application.properties
@@ -8,11 +8,13 @@ logging.level.com.example=info
 server.port=9090
 
 # MongoDB Configuration
-#spring.data.mongodb.uri=mongodb://ultro:163163@localhost:27017/mongdb-tms
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=mongdb-tms
-spring.data.mongodb.password=163163
+spring.data.mongodb.uri=mongodb://ultro:163163@localhost:27017/mongodb-tms?authSource=admin
+
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.database=mongodb-tms
+#spring.data.mongodb.password=163163
+#spring.data.mongodb.uuid-representation=standard
 # Kafka Configuration
 spring.kafka.bootstrap-servers=localhost:9092
 
